--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -48,7 +48,7 @@
         <div *ngFor="let post of allMyPosts" class="post-container">
 
             <div class="d-flex justify-content-end">
-                <a class="p-2 edit-post"  title="Edit Post">
+                <a class="p-2 edit-post"  title="Edit Post" (click) = "openEditModal(post.id)">
                     <i class="fas fa-pencil-alt"></i>
                 </a>
                 <a class="p-2 delete-post"  title="Delete Post" (click) = "openModal(template, post.id, post.aboutLocation.countryShort)">
