--- a/src/app/user/view-user-profile/view-user-profile.component.html
+++ b/src/app/user/view-user-profile/view-user-profile.component.html
@@ -47,8 +47,8 @@
             
                 <div class="d-flex justify-content-end">
                         <a class="p-2 like-post">
-                                <i *ngIf="this.dublicate.includes(post?.id)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
-                                <i *ngIf="!this.dublicate.includes(post?.id)" class="far fa-heart" (click)="likeAPost(post.id)"  title="Like"></i>
+                                <i *ngIf="this.dublicate.includes(this.authState.uid)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
+                                <i *ngIf="!this.dublicate.includes(this.authState.uid)" class="far fa-heart" (click)="likeAPost(post.id)"  title="Like"></i>
                         </a>
                 </div>
            
