--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -40,3 +40,14 @@
     margin-bottom: 2%;
     background-color: #FBFFFE;
   }
+
+
+  
+.like-post{
+  color: pink!important;
+  border: solid 1px white;
+}
+
+.like-post:hover{
+  cursor: pointer;
+}
