--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -56,6 +56,10 @@ h1, h3, p{
     align-items: center;
    
   }
+
+  .align-container:hover{
+    cursor: pointer;
+  }
   
   .parallax-container {
     display: flex;
