--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -37,7 +37,7 @@
 
 <div class="wrapper-post">
     <div class="profile-container ">
-       
+
         <div class="row">
             <div class="col-sm d-flex justify-content-center">
                 Countries
@@ -55,20 +55,20 @@
         </div>
 
         <div class="row">
-                <div class="col-sm d-flex justify-content-center">
-                    0
-                </div>
-                <div class="col-sm d-flex justify-content-center">
-                    0
-                </div>
-                <div class="col-sm d-flex justify-content-center">
-                    0
-                </div>
-                <div class="col-sm d-flex justify-content-center">
-                    0
-                </div>
-    
+            <div class="col-sm d-flex justify-content-center">
+                0
             </div>
+            <div class="col-sm d-flex justify-content-center">
+                {{userObject.nrTrips}}
+            </div>
+            <div class="col-sm d-flex justify-content-center">
+                {{userObject.following.length}}
+            </div>
+            <div class="col-sm d-flex justify-content-center">
+                {{userObject.followers.length}}
+            </div>
+
+        </div>
     </div>
     <br>
 
@@ -82,33 +82,66 @@
     <br>
     <div>
         <div *ngFor="let post of allMyPosts" class="post-container">
+            <div>
+                <div class="d-flex justify-content-end">
+                    <a class="p-2 edit-post" title="Edit Post" (click)="openEditModal(post.id)">
+                        <i class="fas fa-pencil-alt"></i>
+                    </a>
+                    <a class="p-2 delete-post" title="Delete Post" (click)="openModal(template, post.id, post.aboutLocation.countryShort)">
+                        <i class="far fa-trash-alt"></i>
+                    </a>
+                </div>
 
-            <div class="d-flex justify-content-end">
-                <a class="p-2 edit-post" title="Edit Post" (click)="openEditModal(post.id)">
-                    <i class="fas fa-pencil-alt"></i>
-                </a>
-                <a class="p-2 delete-post" title="Delete Post" (click)="openModal(template, post.id, post.aboutLocation.countryShort)">
-                    <i class="far fa-trash-alt"></i>
-                </a>
-            </div>
 
-
-            <h3>{{post.postName}}</h3>
-            <h5>{{post.tripName}}</h5>
-            <div>{{ post.creationDate | date }} </div>
-            <div>{{post.aboutLocation.countryLong}}</div>
-            <div>{{post.postDetails}}</div>
-            <!-- <carousel interval= "false">
+                <h3>{{post.postName}}</h3>
+                <h5>{{post.tripName}}</h5>
+                <div>{{ post.creationDate | date }} </div>
+                <div>{{post.aboutLocation.countryLong}}</div>
+                <div>{{post.postDetails}}</div>
+                <!-- <carousel interval= "false">
                 <slide *ngFor = "let photo of post.photos">
                   <img [src]="photo" alt="slide" style="display: block; width: 100%;">
-                </slide>
-            </carousel> -->
-            <div *ngFor="let photo of post.photos" class="post-photo-display ">
-                <img [src]="photo" alt="slide" class="style-photo">
-            </div>
-            <!-- 
+                 </slide>
+                 </carousel> -->
+                <div *ngFor="let photo of post.photos" class="post-photo-display ">
+                    <img [src]="photo" alt="slide" class="style-photo">
+                </div>
+                <!-- 
                 <ks-modal-gallery [id]="5" [modalImages]="post.photos"
                 ></ks-modal-gallery> -->
+            </div>
+            <div>
+                <div class="comment d-flex justify-content-end">
+                    COMMENTS
+                </div>
+                <div class="comm">
+                <div *ngFor="let comment of allComments" >
+                    <div *ngIf="comment.idPost == post.id" class="single-comment">
+                        <div class="row ">
+                            <div class="col-sm d-flex justify-content-start com-data">
+                               by {{comment.by.userName}}
+                            </div>
+
+                            <div class="col-sm d-flex justify-content-end com-data">
+                                {{comment.creationHour}} - {{comment.creationDate}}
+                            </div>
+                        </div>
+                        <div class="col-sm d-flex justify-content-start com-text">
+                            {{comment.commentText}}
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+                <br>
+                <form [formGroup]='writeComment'>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Write a comment" formControlName="commentText" (keyup.enter)="addCommentToDB(writeComment.value, post.id)"
+                        />
+                    </div>
+                </form>
+
+            </div>
         </div>
     </div>
 
