Fixed some bugs realated to reload, comment and post

--- a/src/app/user/search-destinations/search-destinations.component.html
+++ b/src/app/user/search-destinations/search-destinations.component.html
@@ -33,7 +33,13 @@
                   <div> Top travel destinations:</div>
                   <div>
                     BUCHAREST
-                    UNGARIA
+                    <div>
+                        SIBIU
+                    </div>
+                    <div>
+                       TIMISOARA
+                    </div>
+                   
                   </div>
               </div>
            
