--- a/src/app/user/top-menu/top-menu.component.html
+++ b/src/app/user/top-menu/top-menu.component.html
@@ -34,7 +34,8 @@
                 role="menu" >
               <li role="menuitem"><a class="menuItems dropdown-item" routerLink="/home/find-friends" routerLinkActive="active-option" [routerLinkActiveOptions]="{exact: true}">Search FRIENDS</a></li>
               <li role="menuitem"><a class=" menuItems dropdown-item" routerLink="/home/search-destinations" routerLinkActive="active-option" [routerLinkActiveOptions]="{exact: true}" >Discover new DESTIATIONS</a></li>
-              <!-- <li role="menuitem"><a class="menuItems dropdown-item">Something else here</a></li> -->
+              <li role="menuitem"><a class=" menuItems dropdown-item" routerLink="/home/my-trips" routerLinkActive="active-option" [routerLinkActiveOptions]="{exact: true}" >My TRIPS</a></li>
+              <!-- <li role="menuitem"><a class="menuItems dropdown-item">Something else here</a></li> -->      
             </ul>
           </div>
 
