--- a/src/app/user/user-profile/user-profile.component.html
+++ b/src/app/user/user-profile/user-profile.component.html
@@ -56,7 +56,7 @@
 
         <div class="row">
             <div class="col-sm d-flex justify-content-center">
-                0
+               {{nonDublicateCountries.length}}
             </div>
             <div class="col-sm d-flex justify-content-center">
                 {{userObject.nrTrips}}
