Gallery mode added. And bugs ficed

--- a/src/app/user/user-profile/user-profile.component.scss
+++ b/src/app/user/user-profile/user-profile.component.scss
@@ -31,8 +31,8 @@
 }
 
 .style-photo{
-  height: 150px;
-  width: 150px;
+  height: 100%;
+  width:  100%;
 }
 
 .edit-post{
@@ -53,3 +53,5 @@
 .delete-post:hover{
   cursor: pointer;
 }
+
+
