--- a/src/app/user/view-country-posts/view-country-posts.component.html
+++ b/src/app/user/view-country-posts/view-country-posts.component.html
@@ -1,61 +1,172 @@
 <top-menu></top-menu>
 <div class="container">
-  <div class="name-wrapper d-flex justify-content-center">
-    <div class="">
-      <!-- <h3 (click)="searchCountry()" >{{this.searchedItem}}</h3> -->
-      <h3>{{this.countryData?.long}}</h3>
+    <div class="name-wrapper d-flex justify-content-center">
+        <div class="">
+            <!-- <h3 (click)="searchCountry()" >{{this.searchedItem}}</h3> -->
+            <h3>{{this.countryData?.long}}</h3>
 
+        </div>
     </div>
-  </div>
-  <div class="name-wrapper d-flex justify-content-center">
-      <p>See below which period of the year attracts the most tourists in this country</p>
-    <br>
-  </div>
-
- 
-  <div id="chartdiv"></div>
-
-  <!-- Autocomplete search city! -->
-  <form [formGroup]='searchCityForm'>
-    <div class="form-group">
-
-      <input type="text" class="form-control" [typeahead]="this.countryData?.citiesInCountry" [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0"
-        [typeaheadScrollable]="true" [typeaheadOptionsInScrollableView]="5" (typeaheadNoResults)="typeaheadNoResults($event)"
-        placeholder="Search by city" formControlName="search" />
-      <div class="alert alert-danger" *ngIf="noResult">No City Found</div>
-      <button type="button" class="btn btn-default create-button" (click)="searchCity(searchCityForm.value)">Search</button>
+    <div class="name-wrapper d-flex justify-content-center">
+        <p>See below which period of the year attracts the most tourists in this country</p>
+        <br>
     </div>
-  </form>
 
-  <!-- Here will be the country posts initialy and then => city posts -->
-  <div class="wrapper-post">
 
-    <div *ngIf="!weHavePosts" class="profile-container ">
-      <div class="d-flex justify-content-center"> Sorry! There are no posts.</div>
-    </div>
-    <h5>{{this.citySearchName}}</h5>
-    <br>
-    <div>
-      <div *ngFor="let post of countryListPosts" class="post-container">
-        <div class="d-flex justify-content-end">
-          <a class="p-2 like-post">
-            <i *ngIf="this.dublicate.includes(this.authState.uid)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
-            <i *ngIf="!this.dublicate.includes(this.authState.uid)" class="far fa-heart" (click)="likeAPost(post.id)" title="Like"></i>
-          </a>
+    <div id="chartdiv"></div>
+
+    <!-- Autocomplete search city! -->
+    <form [formGroup]='searchCityForm'>
+        <div class="form-group">
+
+            <input type="text" class="form-control" [typeahead]="this.countryData?.citiesInCountry" [typeaheadOptionsLimit]="7" [typeaheadMinLength]="0"
+                [typeaheadScrollable]="true" [typeaheadOptionsInScrollableView]="5" (typeaheadNoResults)="typeaheadNoResults($event)"
+                placeholder="Search by city" formControlName="search" />
+            <div class="alert alert-danger" *ngIf="noResult">No City Found</div>
+            <button type="button" class="btn btn-default create-button" (click)="searchCity(searchCityForm.value)">Search</button>
+        </div>
+    </form>
+
+    <!-- Here will be the country posts initialy and then => city posts -->
+    <div class="wrapper-post">
+
+        <div *ngIf="!weHavePosts" class="profile-container ">
+            <div class="d-flex justify-content-center"> Sorry! There are no posts.</div>
+        </div>
+        <h5>{{this.citySearchName}}</h5>
+        <br>
+        
+        <ks-modal-gallery [id]="11" [modalImages]="imagesToDisplay" [plainGalleryConfig]="customPlainGalleryRowConfig"></ks-modal-gallery>
+        <div>
+
+            <div *ngFor="let post of countryListPosts" class="post-container">
+
+                <div class="container">
+                    <!-- Card Flip -->
+                    <div class="card-flip">
+                        <div class="flip align-front">
+
+                            <div class="front">
+                                <!-- front content -->
+
+
+                                <div class="">
+                                    <div class="d-flex">
+                                        <div class="p-2 like mr-auto">
+                                            <i class="fas fa-heart" title="Likes"></i>
+                                            {{post.likedByUsers.length}}
+                                        </div>
+                                        <div class="p-2  ml-auto">
+                                            {{ post.creationHour}}
+                                        </div>
+
+                                    </div>
+                                    <h3 class=" justify-content-center">{{post.postName}}</h3>
+                                    <div>By: {{ post.byUser }} </div>
+                                    <h6>Trip Name: {{post.tripName}}</h6>
+                                    <br>
+                                    <div>
+                                        <h4 class="align-items-center"> {{ post.creationDate | date: 'dd' }} </h4>
+                                        <h4 class="align-items-center"> {{ post.creationDate | date: 'MMM' }} {{ post.creationDate | date: 'y' }}</h4>
+                                    </div>
+                                    <br>
+
+                                    <div>Location:
+                                        <span class="location-displat">
+                                            {{post.aboutLocation.city}} - {{post.aboutLocation.countryLong}}
+                                        </span>
+                                    </div>
+                                    <div class="logo-post">
+                                        <div class="d-flex justify-content-center">
+                                            <img src="assets/images/Circle.png" />
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                            </div>
+
+                            <div class="back">
+
+                                <div class="d-flex justify-content-end">
+                                    <a class="p-2 like-post">
+                                        <i *ngIf="post.dublicate.includes(this.authState.uid)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
+                                        <i *ngIf="!post.dublicate.includes(this.authState.uid)" class="far fa-heart" (click)="likeAPost(post.id)" title="Like"></i>
+                                    </a>
+                                </div>
+                                <!-- back content -->
+                                <br>
+                                <div>{{post.postDetails}}</div>
+                                <br>
+                                <!-- <div *ngFor="let photo of post.photos" class="post-photo-display ">
+                                        <img [src]="photo" height="100%" alt="slide" class="style-photo">
+                                    </div> -->
+
+                                <section class="d-flex justify-content-center">
+
+                                    <div class="my-app-custom-plain-container-row">
+                                        <ng-container *ngFor="let img of post.images; let i = index">
+                                            <div *ngIf="i <= 2">
+                                                <!-- 2 is a fixed value that I'm using to display only two images -->
+                                                <a class="more" *ngIf="i==2" (click)="openImageModalRow(img, post.images)"> + {{ post.photos.length - 2 - 1}} more </a>
+                                                <img *ngIf="img.modal && img.modal.img; else noThumb" class="my-app-custom-image-row" [src]="img.modal.img" (click)="openImageModalRow(img, post.images)"
+                                                    [alt]="img.modal.description" />
+
+                                                <ng-template #noThumb>
+                                                    <img class="my-app-custom-image-row" [src]="img.modal.img" (click)="openImageModalRow(img, post.images)" [alt]="img.modal.description"
+                                                    />
+                                                </ng-template>
+                                            </div>
+                                        </ng-container>
+                                    </div>
+
+                                </section>
+
+                                <br>
+                                <div>
+                                    <div class="comment d-flex justify-content-end">
+                                        COMMENTS
+                                    </div>
+                                    <div class="comm">
+                                        <div *ngFor="let comment of allComments">
+                                            <div *ngIf="comment.idPost == post.id" class="single-comment">
+                                                <div class="row ">
+                                                    <div class="col-sm d-flex justify-content-start com-data">
+                                                        by {{comment.by.userName}}
+                                                    </div>
+
+                                                    <div class="col-sm d-flex justify-content-end com-data">
+                                                        {{comment.creationHour}} - {{comment.creationDate}}
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm d-flex justify-content-start com-text">
+                                                    {{comment.commentText}}
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <form [formGroup]='writeComment'>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Write a comment" formControlName="commentText" (keyup.enter)="addCommentToDB(writeComment.value, post.id)"
+                                            />
+                                        </div>
+                                    </form>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
         </div>
 
-        <h3>{{post.postName}}</h3>
-        <h5>{{post.tripName}}</h5>
-        <div>{{ post.creationDate | date }} </div>
-        <div>{{post.aboutLocation.countryLong}}</div>
-        <div>{{post.postDetails}}</div>
-
-        <div *ngFor="let photo of post.photos" class="post-photo-display ">
-          <img [src]="photo" alt="slide" class="style-photo">
-        </div>
-      </div>
     </div>
-
-  </div>
 
 </div>
