--- a/src/app/user/view-user-profile/view-user-profile.component.html
+++ b/src/app/user/view-user-profile/view-user-profile.component.html
@@ -1,100 +1,222 @@
 <top-menu></top-menu>
-<div class="name-wrapper d-flex justify-content-center">
-    <div class="">
-        <h3> {{this.userPersonalInformation?.firstName}} {{this.userPersonalInformation?.lastName}}</h3>
+
+<div *ngIf="userDeletedMessage" class="name-wrapper d-flex justify-content-center"> User no longer available!</div>
+<div *ngIf="!userDeletedMessage">
+
+    <div class="name-wrapper d-flex justify-content-center">
+        <div class="">
+            <h3> {{this.userPersonalInformation?.firstName}} {{this.userPersonalInformation?.lastName}}</h3>
+        </div>
     </div>
-</div>
 
-<div class="wrapper-profile">
-    <div class="profile-container row d-flex justify-content-center">
-        <div class="thumbnail-me  d-flex justify-content-center ">
-            <img [src]="this.url" class=" profile profile-avatar">
-        </div>
-        <div *ngIf="this.userPersonalInformation?.bio; else messageInfo" class="info col-sm-6 ">
-            <div class="d-flex justify-content-end">
-                <b>Something about me</b>
+    <div class="wrapper-profile">
+        <div class="profile-container row d-flex justify-content-center">
+            <div class="thumbnail-me  d-flex justify-content-center ">
+                <img [src]="this.url" class=" profile profile-avatar">
             </div>
-            <div class="text-description">
-                <div>{{this.userPersonalInformation?.bio}}</div>
-
-                <div *ngIf="this.userPersonalInformation?.homeBase" class="">My Home Base: {{this.userPersonalInformation?.homeBase}} </div>
-            </div>
-        </div>
-        <ng-template #messageInfo>
-            <div class="info col-sm-6 ">
+            <div *ngIf="this.userPersonalInformation?.bio; else messageInfo" class="info col-sm-6 ">
+                <div class="d-flex justify-content-end">
+                    <b>Something about me</b>
+                </div>
                 <div class="text-description">
-                    Tell us something about you.
+                    <div>{{this.userPersonalInformation?.bio}}</div>
+
                     <div *ngIf="this.userPersonalInformation?.homeBase" class="">My Home Base: {{this.userPersonalInformation?.homeBase}} </div>
                 </div>
             </div>
+            <ng-template #messageInfo>
+                <div class="info col-sm-6 ">
+                    <div class="text-description">
+                        Tell us something about you.
+                        <div *ngIf="this.userPersonalInformation?.homeBase" class="">My Home Base: {{this.userPersonalInformation?.homeBase}} </div>
+                    </div>
+                </div>
 
-        </ng-template>
+            </ng-template>
+        </div>
+
     </div>
 
-</div>
 
 
-<div class="wrapper-post">
-    <a *ngIf="isFollowing" class="btn btn-outline-dark" (click)="unfollowAPerson()">Unfollow</a>
-    <a *ngIf="!isFollowing" class="btn btn-outline-dark" (click)="followPerson()">Follow</a>
-    <div *ngIf="!weHavePosts" class="profile-container ">
-        <div class="d-flex justify-content-center"> Sorry! There are no posts.</div>
-    </div>
-
-    <br>
+    <ks-modal-gallery [id]="11" [modalImages]="imagesToDisplay" [plainGalleryConfig]="customPlainGalleryRowConfig"></ks-modal-gallery>
     <div>
-        <div *ngFor="let post of userListPosts" class="post-container">
-            <div>
-                <div class="d-flex justify-content-end">
-                    <a class="p-2 like-post">
-                        <i *ngIf="this.dublicate.includes(this.authState.uid)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
-                        <i *ngIf="!this.dublicate.includes(this.authState.uid)" class="far fa-heart" (click)="likeAPost(post.id)" title="Like"></i>
-                    </a>
-                </div>
 
-                <h3>{{post.postName}}</h3>
-                <h5>{{post.tripName}}</h5>
-                <div>{{post.creationDate | date }} </div>
-                <div>{{post.aboutLocation.countryLong}}</div>
-                <div>{{post.postDetails}}</div>
-
-                <div *ngFor="let photo of post.photos" class="post-photo-display ">
-                    <img [src]="photo" alt="slide" class="style-photo">
-                </div>
+        <div class="wrapper-post">
+            <div *ngIf="userObject.role === 'user'">
+                <a *ngIf="isFollowing" class="btn btn-outline-dark" (click)="unfollowAPerson()">Unfollow</a>
+                <a *ngIf="!isFollowing" class="btn btn-outline-dark" (click)="followPerson()">Follow</a>
             </div>
+            <div *ngIf="userObject.role === 'admin'">
+                <a class="delete-user d-flex justify-content-center" title="Delete USER" (click)="openDeleteUserModal(deleteUser)">
+                    <b>DELETE USER</b>
+                </a>
+            </div>
+
+
+
+            <div *ngIf="!weHavePosts" class="profile-container ">
+                <div class="d-flex justify-content-center"> Sorry! There are no posts.</div>
+            </div>
+
+            <br>
+
             <div>
-                <div class="comment d-flex justify-content-end">
-                    COMMENTS
-                </div>
-                <div class="comm">
-                    <div *ngFor="let comment of allComments">
-                        <div *ngIf="comment.idPost == post.id" class="single-comment">
-                            <div class="row ">
-                                <div class="col-sm d-flex justify-content-start com-data">
-                                    by {{comment.by.userName}}
+
+                <div *ngFor="let post of userListPosts" class="post-container">
+
+                    <div class="container">
+                        <!-- Card Flip -->
+                        <div class="card-flip">
+                            <div class="flip align-front">
+
+                                <div class="front">
+                                    <!-- front content -->
+
+
+                                    <div class="">
+                                        <div class="d-flex">
+                                            <div class="p-2 like mr-auto">
+                                                <i class="fas fa-heart" title="Likes"></i>
+                                                {{post.likedByUsers.length}}
+                                            </div>
+                                            <div class="p-2  ml-auto">
+                                                {{ post.creationHour}}
+                                            </div>
+
+                                        </div>
+                                        <h3 class=" justify-content-center">{{post.postName}}</h3>
+                                        <div>By: {{ post.byUser }} </div>
+                                        <h6>Trip Name: {{post.tripName}}</h6>
+                                        <br>
+                                        <div>
+                                            <h4 class="align-items-center"> {{ post.creationDate | date: 'dd' }} </h4>
+                                            <h4 class="align-items-center"> {{ post.creationDate | date: 'MMM' }} {{ post.creationDate | date: 'y' }}</h4>
+                                        </div>
+                                        <br>
+
+                                        <div>Location:
+                                            <span class="location-displat">
+                                                {{post.aboutLocation.city}} - {{post.aboutLocation.countryLong}}
+                                            </span>
+                                        </div>
+                                        <div class="logo-post">
+                                            <div class="d-flex justify-content-center">
+                                                <img src="assets/images/Circle.png" />
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
                                 </div>
 
-                                <div class="col-sm d-flex justify-content-end com-data">
-                                    {{comment.creationHour}} - {{comment.creationDate}}
+                                <div class="back">
+                                    <div *ngIf="userObject.role === 'user'" class="d-flex justify-content-end">
+                                        <a class="p-2 like-post">
+                                            <i *ngIf="post.dublicate.includes(this.authState.uid)" class="fas fa-heart" (click)="dislikeAPost(post.id)" title="Dislike"></i>
+                                            <i *ngIf="!post.dublicate.includes(this.authState.uid)" class="far fa-heart" (click)="likeAPost(post.id)" title="Like"></i>
+                                        </a>
+                                    </div>
+                                    <div *ngIf="userObject.role === 'admin'" class="d-flex justify-content-end">
+                                        <a class="p-2 warning-post" title="Warning Post" (click)="openModalWarning(warningModal, post.id, post.aboutLocation.countryShort)">
+                                            <i class="fas fa-exclamation"></i>
+                                        </a>
+                                        <a class="p-2 delete-post" title="Delete Post" (click)="openModal(template, post.id, post.aboutLocation.countryShort)">
+                                            <i class="far fa-trash-alt"></i>
+                                        </a>
+
+                                    </div>
+                                    <!-- back content -->
+                                    <br>
+                                    <div>{{post.postDetails}}</div>
+                                    <br>
+                                    <!-- <div *ngFor="let photo of post.photos" class="post-photo-display ">
+                                        <img [src]="photo" height="100%" alt="slide" class="style-photo">
+                                    </div> -->
+
+                                    <section class="d-flex justify-content-center">
+
+                                        <div class="my-app-custom-plain-container-row">
+                                            <ng-container *ngFor="let img of post.images; let i = index">
+                                                <div *ngIf="i <= 2">
+                                                    <!-- 2 is a fixed value that I'm using to display only two images -->
+                                                    <a class="more" *ngIf="i==2" (click)="openImageModalRow(img, post.images)"> + {{ post.photos.length - 2 - 1}} more </a>
+                                                    <img *ngIf="img.modal && img.modal.img; else noThumb" class="my-app-custom-image-row" [src]="img.modal.img" (click)="openImageModalRow(img, post.images)"
+                                                        [alt]="img.modal.description" />
+
+                                                    <ng-template #noThumb>
+                                                        <img class="my-app-custom-image-row" [src]="img.modal.img" (click)="openImageModalRow(img, post.images)" [alt]="img.modal.description"
+                                                        />
+                                                    </ng-template>
+                                                </div>
+                                            </ng-container>
+                                        </div>
+
+                                    </section>
+
+                                    <br>
+                                    <div>
+                                        <div class="comment d-flex justify-content-end">
+                                            COMMENTS
+                                        </div>
+                                        <div class="comm">
+                                            <div *ngFor="let comment of allComments">
+                                                <div *ngIf="comment.idPost == post.id" class="single-comment">
+                                                    <div class="row ">
+                                                        <div class="col-sm d-flex justify-content-start com-data">
+                                                            by {{comment.by.userName}}
+                                                        </div>
+
+                                                        <div class="col-sm d-flex justify-content-end com-data">
+                                                            {{comment.creationHour}} - {{comment.creationDate}}
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm d-flex justify-content-start com-text">
+                                                        {{comment.commentText}}
+                                                    </div>
+                                                    <a class="col-sm d-flex justify-content-end warning-post" title="Warning Comment" (click)="openModalWarning(warningModal, post.id, post.aboutLocation.countryShort)">
+                                                        <i class="fas fa-exclamation"></i>
+                                                    </a>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <form [formGroup]='writeComment'>
+                                            <div *ngIf="userObject.role === 'user'" class="form-group">
+                                                <input type="text" class="form-control" placeholder="Write a comment" formControlName="commentText" (keyup.enter)="addCommentToDB(writeComment.value, post.id)"
+                                                />
+                                            </div>
+                                        </form>
+
+                                    </div>
                                 </div>
+
                             </div>
-                            <div class="col-sm d-flex justify-content-start com-text">
-                                {{comment.commentText}}
-                            </div>
+
                         </div>
-
                     </div>
+
+
                 </div>
-                <br>
-                <form [formGroup]='writeComment'>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Write a comment" formControlName="commentText" (keyup.enter)="addCommentToDB(writeComment.value, post.id)"
-                        />
-                    </div>
-                </form>
-
             </div>
         </div>
-    </div>
 
-</div>
+
+    </div>
+    <ng-template #template>
+        <div class="modal-body text-center">
+            <p>Are you sure you want to delete this post?</p>
+            <button type="button" class="btn btn-default" (click)="confirm()">Yes</button>
+            <button type="button" class="btn btn-primary" (click)="decline()">No</button>
+        </div>
+    </ng-template>
+
+    <ng-template #deleteUser>
+        <div class="modal-body text-center">
+            <p>Are you sure you want to delete this user?</p>
+            <button type="button" class="btn btn-default" (click)="confirmDeleteUser()">Yes</button>
+            <button type="button" class="btn btn-primary" (click)="decline()">No</button>
+        </div>
+    </ng-template>
