--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -1,3 +1,5 @@
+@import '~scss/colors';
+
 %shared-wrapper{
     right: 0px;
     margin: 0px auto;
@@ -17,6 +19,13 @@
       background-color: white;
       z-index: 100;
   }
+
+  .text-wrapp{
+    margin-bottom: 0px;
+    padding-top: 4%!important;
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
   
   .wrapper-profile{
     @extend %shared-wrapper;
@@ -35,7 +44,7 @@
     }
   
   .post-container{
-    border: 1px solid rgb(20, 20, 20);
+    // border: 1px solid rgb(20, 20, 20);
     padding: 2%;
     margin-bottom: 2%;
     background-color: #FBFFFE;
@@ -43,11 +52,25 @@
 
 
   
-.like-post{
+.like-post, .like{
   color: pink!important;
+  border: solid 1px white;
+
+}
+
+.warning-post{
+  color: $main-yellow-color!important;
   border: solid 1px white;
 }
 
+.warning-post:hover{
+  cursor: pointer;
+}
+
+.location-displat{
+  color: $main-yellow-color;
+  font-weight: bold;
+}
 .like-post:hover{
   cursor: pointer;
 }
@@ -76,8 +99,110 @@
 }
 
 .comm{
-  max-height: 400px;
+  max-height: 160px;
   overflow: auto;
-  overflow-x:hidden
+  overflow-x:hidden;
+  
 }
 
+::-webkit-scrollbar {
+  display: none;
+  }
+//  HERE
+.card-flip {
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+.card-flip:hover .flip, .card-flip.hover .flip {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.card-flip,
+.front,
+.back {
+  width: 100%;
+  height: 320px;
+}
+
+.flip {
+  transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  position: relative;
+}
+
+.front,
+.back {
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 1px solid black;
+  padding: 3%;
+}
+
+.front {
+  z-index: 2;
+ 
+  background-color: #FBFFFE;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+
+.back {
+  overflow: auto;
+  overflow-x:hidden;
+  overflow-y: scroll;
+  background-color: white;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+ 
+}
+
+.align-front{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.logo-post{
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+}
+
+.my-app-custom-plain-container-row {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.my-app-custom-plain-container-row .my-app-custom-image-row {
+  cursor: pointer;
+  height: auto;
+  margin-right: 2px;
+  width: 130px;
+}
+.my-app-custom-plain-container-row .my-app-custom-image-row.after {
+  border-top: 2px;
+  cursor: pointer;
+  display: none;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.more {
+  background: rgba(0, 0, 0, .7);
+  cursor: pointer;
+  color: white;
+  padding-top: 10px;
+  max-height: 100px;
+  position: absolute;
+  text-align: center;
+  width: 130px;
+}
