Final touch. Bugs fixed.

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -13,23 +13,35 @@
  
     <div  #target class="content-container">
         <div class="content">
-            <h1 class="text-center">UNIQUE EXPERIENCES ALL OVER THE WORLD
+            <h1 class="text-center single-title-text">UNIQUE EXPERIENCES
             </h1>
         </div>
+
     </div>
     <div class="parallax-container2"></div>
-    <div class="content-container2">
-        <div class="content-two row">
-            <div class="col-md-4">
-                <h3>START PLANNING YOUR NEXT ADVENTURE</h3>
+    <div  class="content-container">
+            <div class="content">
+                <h1 class="text-center single-title-text">Start planning you next adventure
+                </h1>
             </div>
-            <div class="col-md-8">
-                <p>It can be hard to know where to start when planning your dream trip. What’s the first step? What’s the second?
-                    Third? Fourth? Travel can seem like a daunting subject with so much information available and, the longer
-                    you go away, the more things you seem to have to think about.
-                </p>
-            </div>
+    
         </div>
+    <div class="parallax-container2"></div>
+    <div class="content-container2">
+        <div class="content-two">
+            <div class="text-center">
+                <h1 class="title-text">
+                    Be curious   Be bold
+                </h1>
+                <br>
+                <h4>Looking for that awesome next adventure? Or are you just a rookie in this big 
+                    beautiful world and you need advice on what should be your first, second and third step.
+                     Travel can seem like a daunting subject with so much information available and, the longer 
+                     you go away, the more things you seem to have to think about.                
+                </h4>
+            </div>
+            </div>
+      
     </div>
 
 
