--- a/src/app/user/news/news.component.scss
+++ b/src/app/user/news/news.component.scss
@@ -3,4 +3,8 @@
 @import '~scss/profile';
 @import '~scss/posts';
 @import '~scss/userProfile';
+@import '~scss/spinner';
 
+.search-results {
+    height: 100%;
+  }
