--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,4 +1,6 @@
 
+@import '~scss/colors';
+
 h1, h3, p{
   color: white;
 }
@@ -14,6 +16,8 @@ h1, h3, p{
     position: relative;
     display: block;
     background-color: rgb(36, 36, 36);
+    background-image: url("assets/images/background.jpg");
+    // background-size: cover;
     z-index: 1;
   }
   .content-two{
@@ -30,10 +34,11 @@ h1, h3, p{
     width: 300px;
   }
 
-  p{
-      font-size: 1.3em;
+  h4{
+      // font-size: 1.3em;
       margin-left: 5%;
       margin-right: 3%;
+      color: white;
   }
   h3{
     margin-left: 3%;
@@ -47,7 +52,7 @@ h1, h3, p{
   .content {
     max-width: 800px;
     margin: 0 auto;
-    padding: 75px 0;
+    padding: 60px 0;
   }
     
   .align-container {
@@ -70,7 +75,7 @@ h1, h3, p{
     justify-content: center;
     align-items: center;
     transform: translateZ(-5px) scale(6); 
-    background-color: #F7F7F7;
+    background-color: $background-color;
   }
 
   .parallax-container2 {
@@ -82,11 +87,22 @@ h1, h3, p{
     justify-content: center;
     align-items: center;
     transform: translateZ(-5px) scale(6); 
-    background-color: #F7F7F7;
+    background-color: $background-color;
   }
 
   @media screen and (max-width: 550px) {
     img {
        width: 200px;
     }
+}
+
+.title-text{
+  font-weight: bold;
+  color: $main-yellow-color;
+  font-family: fantasy;
+}
+
+.single-title-text{
+  color: $main-yellow-color;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
