--- a/src/scss/posts.scss
+++ b/src/scss/posts.scss
@@ -201,8 +201,41 @@
   cursor: pointer;
   color: white;
   padding-top: 10px;
-  max-height: 100px;
+  height: 80px;
   position: absolute;
   text-align: center;
   width: 130px;
+}
+
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 3%;
+  right: 3%;
+  opacity: 0;
+  transition: all .2s ease-in-out;
+}
+
+.show-scroll {
+  opacity: 1;
+  transition: all .2s ease-in-out;
+}
+
+.scroll-top-button{
+  background: black;
+  color: white;
+  padding: 14px;
+  border: none;
+  z-index: 3333333;
+  font-size: 17px;
+}
+
+.scroll-top-button:hover{
+  cursor: pointer;
+}
+
+.no-posts{
+  margin: 5%;
+  color: black;
+  font-size: 16px;
 }
